Frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1
  labels:
    app: webapp-sql
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-sql
      tier: frontend
  template:
    metadata:
    labels:
      app: webapp-sql
      tier: frontend
  spec:
    containers:
    - name: webapp1
      image: hshar/webapp
      ports: 
      - containerPort: 8081
