backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqldb
  labels:
    app: webapp-sql
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-sql
      tier: backend
  template:
    metadata:
    labels:
      app: webapp-sql
      tier: backend
  spec:
    containers:
    - name: mysql
      image: hshar/mysql:5.5
      ports: 
      - containerPort: 3306
