backendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-sql1
spec:
  selector:
    app: webapp-sql
    tier: backend
 ports: 
 - port: 3306
 clusterIP: None
