frontservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-sql
spec:
  selector:
    app: webapp-sql
    tier: frontend
 ports: 
 - port: 80
 type: Ingress
